clang/test/BSC/Negative/OperatorOverload/Subscript/Subscript.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct A {
    int a;
};

struct AP {
  struct A ap;
};

int test1() {
    struct A sa = {1};
    struct AP sap = {sa};
    int c = sap->a;                       // expected-error {{member reference type 'struct AP' is not a pointer; did you mean to use '.'?}}
                                          // expected-error@-1 {{no member named 'a' in 'struct AP'}}
    return 0;
}

struct BP {
  struct A *ap;
};

__attribute__((operator ->))
struct A* memberDeref2(struct BP s) {  // expected-error {{overloaded function 'memberDeref2' first parameter or return type must be struct or enumeration pointer type}}
    return s.ap;                       // expected-note@-1 {{candidate function not viable: no known conversion from 'struct CP' to 'struct BP' for 1st argument}}
}

struct CP {
  struct A *ap;
};

int test2() {
    struct A sa = {1};
    struct CP sap = {&sa};
    int c = sap->a;                    // expected-error {{no viable overloaded 'operator->'}}
    return 0;
}
